fix layout issues

--- a/stile/style.css
+++ b/stile/style.css
@@ -33,20 +33,21 @@ img {
 .main-division {
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 /* aside, header e main content */
 
-main {
+.body-content {
     background-color: #141922;
-    height: calc(100vh - var(--footer-height));
+    flex-grow: 1;
     display: flex;
     width: 100%;
 }
 
 /* sidebar con playlist */
 
-aside {
+.sidebar {
     background-color: black;
     width: 250px;
     overflow-y: hidden;
@@ -57,7 +58,7 @@ aside {
 /* container che racchiude header e main content con playlist */
 
 .main-content-container {
-    height: 100%;
+   flex-grow: 1;
     overflow-y: scroll;
     
 }
@@ -75,18 +76,10 @@ header {
 
 /* contenuto delle playlist */
 
-.main-content {
+main {
     max-width: 100%;
     height: 100%;
 }
-
-
-
-
-
-
-
-
 
 
 
